[project]
name = "local-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.7",
    "fpdf2>=2.8.7",
    "google-genai>=1.72.0",
    "huggingface-hub>=1.10.1",
    "ipywidgets>=8.1.8",
    "pgvector>=0.4.2",
    "pinecone>=8.1.2",
    "psycopg2-binary>=2.9.12",
    "pymongo>=4.16.0",
    "pyodbc>=5.3.0",
    "pypdf>=6.10.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sentence-transformers>=5.4.1",
    "voyageai>=0.3.7",
]
